src/objects/Business_Customization__c.object
<CustomObject>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customize_MMS_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customize MMS Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Business Customization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000000}</displayFormat>
        <label>Business Customization	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Customizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>